--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ uuid = { version = "1", features = ["js"], optional = true }
 actix-files = { version = "0.6", optional = true }
 actix-web = { version = "4", optional = true, features = ["macros"] }
 leptos_actix = { version = "0.8.2", optional = true }
+server_fn = { version = "0.8.2", optional = true }
 http = { version = "1.3.1", optional = true }
 dotenv = { version = "0.15", optional = true }
 libsql = { version = "0.9.24", optional = true }
@@ -55,6 +56,7 @@ ssr = [
     "dep:actix-files",
     "dep:actix-web",
     "dep:leptos_actix",
+    "dep:server_fn",
     "dep:dotenv",
     "dep:libsql",
     "dep:chrono",
